# ChessMoveAnalyzer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: perft.cpp
docs/: API.md
examples/: analysis_demo.cpp
include/: chess_analyzer.h
include/chess_analyzer/core/: bitboard_attacks.h  move.h  move_generator.h  position.h  types.h
include/chess_analyzer/evaluation/: evaluator.h
include/chess_analyzer/explanation/: move_explainer.h
include/chess_analyzer/notation/: pgn_parser.h
src/: chess_analyzer.cpp
src/core/: bitboard_attacks.cpp  move.cpp  move_generator.cpp  position.cpp  position_moves.cpp
src/evaluation/: evaluator.cpp
src/explanation/: move_explainer.cpp
src/notation/: pgn_parser.cpp
tests/: CMakeLists.txt  test_position.cpp
tools/cli/: main.cpp
